DOWNLOAD_APK button, rupee sign, section-title clamp fix, clean projectsData JS

--- a/project.html
+++ b/project.html
@@ -340,7 +340,7 @@
         <!-- 3. ACTION BUTTONS -->
         <div class="project-actions">
             <a id="btn-demo" href="#" class="action-btn action-btn-primary">
-                <i data-lucide="play" style="width:16px;height:16px;"></i> RUN_DEMO
+                <i data-lucide="download" style="width:16px;height:16px;"></i> DOWNLOAD_APK
             </a>
             <a id="btn-github" href="https://github.com/LarssonDev" target="_blank"
                 class="action-btn action-btn-secondary">
