--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 
                         <div class="input-group">
                             <label>MISSION_RESOURCES (BUDGET_ESTIMATE)</label>
-                            <input type="text" id="budget" placeholder="E.G. $1,000 - $5,000" required>
+                            <input type="text" id="budget" placeholder="E.G. ₹10,000 - ₹50,000" required>
                         </div>
 
                         <div class="input-group">
