--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- ═══════════════ HERO ═══════════════ -->
         <section class="hero">
             <div class="hero-container">
-                <div class="profile-window window reveal">
+                <div class="profile-window window">
                     <div class="window-header">
                         <span class="window-title">IDENT_SNAPSHOT.JPG</span>
                         <div class="window-controls">
@@ -55,7 +55,7 @@
                     </div>
                 </div>
 
-                <div class="window hero-window reveal">
+                <div class="window hero-window">
                     <div class="window-header">
                         <span class="window-title">DEVELOPER_MANIFESTO.EXE</span>
                         <div class="window-controls">
@@ -406,7 +406,7 @@
     </footer>
 
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
     <script>lucide.createIcons();</script>
 </body>
 
