--- a/project.html
+++ b/project.html
@@ -307,8 +307,7 @@
 <body>
     <div class="cursor"></div>
     <div class="cursor-trail"></div>
-
-    <header>
+    <header class="navbar">
         <div class="logo">LARSSON<span class="logo-dot">.</span>DS</div>
         <nav>
             <a href="index.html" class="nav-link">← HOME</a>
@@ -339,9 +338,9 @@
 
         <!-- 3. ACTION BUTTONS -->
         <div class="project-actions">
-            <a id="btn-demo" href="#" class="action-btn action-btn-primary">
+            <button id="btn-download-trigger" class="action-btn action-btn-primary">
                 <i data-lucide="download" style="width:16px;height:16px;"></i> DOWNLOAD_APK
-            </a>
+            </button>
             <a id="btn-github" href="https://github.com/LarssonDev" target="_blank"
                 class="action-btn action-btn-secondary">
                 <i data-lucide="github" style="width:16px;height:16px;"></i> VIEW_SOURCE
@@ -390,10 +389,129 @@
             <div class="gallery" id="project-gallery"></div>
         </div>
 
+        <!-- 10. FEEDBACK SECTION -->
+        <div class="section-loader">FEEDBACK</div>
+        <div class="window feedback-window reveal">
+            <div class="window-header">
+                <span class="window-title">USER_FEEDBACK.TXT</span>
+            </div>
+            <div class="window-content">
+                <form id="feedback-form">
+                    <div class="input-group">
+                        <textarea id="feedback-text" rows="4"
+                            placeholder="HOW WAS THE EXPERIENCE? ANY BUGS OR SUGGESTIONS?" required></textarea>
+                    </div>
+                    <button type="submit" class="action-btn action-btn-primary"
+                        style="width:100%;">SUBMIT_FEEDBACK.EXE</button>
+                </form>
+                <div id="feedback-status" style="margin-top:10px; display:none;"></div>
+            </div>
+        </div>
+
+    </main>
+
+    <!-- DOWNLOAD MODAL -->
+    <div id="download-modal" class="modal-overlay">
+        <div class="window modal-window">
+            <div class="window-header">
+                <span class="window-title">DOWNLOAD_AUTHORIZATION.EXE</span>
+                <button class="modal-close" id="close-modal">&times;</button>
+            </div>
+            <div class="window-content" style="text-align:center; padding: 40px 30px;">
+                <p style="margin-bottom:30px; font-size:1rem; line-height:1.5; color: #333; font-weight: 500;">
+                    PLEASE VERIFY YOUR IDENTITY WITH GOOGLE TO ACCESS THE BUILD.
+                    THIS ENSURES WE LOG LEGITIMATE GMAIL ADDRESSES FOR OUR RECORDS.
+                </p>
+
+                <div style="display: flex; justify-content: center;">
+                    <button id="google-signin-btn" class="submit-btn" style="
+                        display: flex; 
+                        align-items: center; 
+                        justify-content: center; 
+                        gap: 12px; 
+                        font-size: 0.9rem; 
+                        padding: 12px 20px; 
+                        background: white; 
+                        color: black; 
+                        border: 3px solid black;
+                        box-shadow: 5px 5px 0px black;
+                        cursor: pointer;
+                        transition: all 0.1s;
+                        width: auto;
+                        min-width: 280px;
+                        max-width: 100%;
+                        box-sizing: border-box;
+                    ">
+                        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google"
+                            style="width:20px; height:20px; flex-shrink: 0;">
+                        <span
+                            style="font-weight: 800; letter-spacing: 0.5px; white-space: nowrap;">VERIFY_WITH_GOOGLE.EXE</span>
+                    </button>
+                </div>
+
+                <p id="auth-status"
+                    style="margin-top:20px; font-size:0.8rem; font-weight: 800; color:var(--bg-magenta); display:none; text-transform: uppercase;">
+                    SYNCING_AUTHORIZATION...
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <style>
+        .modal-overlay {
+            position: fixed;
+            inset: 0;
+            background: rgba(0, 0, 0, 0.85);
+            display: none;
+            align-items: center;
+            justify-content: center;
+            z-index: 2000;
+            padding: 20px;
+            backdrop-filter: blur(4px);
+        }
+
+        .modal-window {
+            max-width: 500px;
+            width: 100%;
+            animation: modalIn 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        }
+
+        @keyframes modalIn {
+            from {
+                transform: scale(0.9);
+                opacity: 0;
+            }
+
+            to {
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+
+        .modal-close {
+            background: none;
+            border: none;
+            color: white;
+            font-size: 1.5rem;
+            cursor: pointer;
+            padding: 0;
+            line-height: 1;
+        }
+
+        .modal-close:hover {
+            color: var(--bg-magenta);
+        }
+
+        .feedback-window {
+            margin-top: 20px;
+            box-shadow: 5px 5px 0 black;
+        }
+    </style>
+
     </main>
 
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
     <script>
         lucide.createIcons();
         document.addEventListener('DOMContentLoaded', () => {
