Organize project files into assets directory

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Larsson — Data Science & App Developer</title>
     <meta name="description"
         content="Portfolio of Larsson — MSc Data Science student, Mobile App Developer. Building AI systems, mobile apps, and data-driven solutions.">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -47,8 +47,7 @@
                         </div>
                     </div>
                     <div class="profile-image">
-                        <img src="profile.jpg" alt="Larsson Profile"
-                            style="width: 100%; height: 100%; object-fit: cover;">
+                        <img src="assets/images/profile.jpg" alt="Larsson" class="profile-img">
                     </div>
                     <div class="profile-badge">
                         <span class="badge-dot"></span> AVAILABLE FOR WORK
@@ -149,7 +148,7 @@
                     <div class="window-content p-0">
                         <a href="project.html?id=ila">
                             <div class="card-img-wrap">
-                                <img src="icon.png" alt="ILA COMMUNITY">
+                                <img src="assets/images/icon.png" alt="ILA Community">
                                 <div class="card-overlay">VIEW DETAILS →</div>
                             </div>
                         </a>
@@ -181,7 +180,7 @@
                     <div class="window-content p-0">
                         <a href="project.html?id=anatomypro">
                             <div class="card-img-wrap">
-                                <img src="anatomy_pulse.png" alt="NOVA">
+                                <img src="assets/images/anatomy_pulse.png" alt="AnatomyPro">
                                 <div class="card-overlay">VIEW DETAILS →</div>
                             </div>
                         </a>
@@ -213,7 +212,7 @@
                     <div class="window-content p-0">
                         <a href="project.html?id=spam-remover">
                             <div class="card-img-wrap">
-                                <img src="spam_remover.jpg" alt="Gmail Spam Remover">
+                                <img src="assets/images/spam_remover.jpg" alt="Spam Remover">
                                 <div class="card-overlay">VIEW DETAILS →</div>
                             </div>
                         </a>
@@ -246,7 +245,7 @@
                     <div class="window-content p-0">
                         <a href="project.html?id=inbawk">
                             <div class="card-img-wrap">
-                                <img src="inbawk_board.png" alt="INBAWK">
+                                <img src="assets/images/inbawk_board.png" alt="Inbawk Cards">
                                 <div class="card-overlay">VIEW DETAILS →</div>
                             </div>
                         </a>
@@ -406,7 +405,7 @@
     </footer>
 
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
-    <script src="main.js" type="module"></script>
+    <script type="module" src="assets/js/main.js"></script>
     <script>lucide.createIcons();</script>
 </body>
 
