--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADMIN_DASHBOARD | LARSSON.DS</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -236,7 +236,7 @@
         </style>
     </main>
 
-    <script src="main.js" type="module"></script>
+    <script type="module" src="assets/js/main.js"></script>
 </body>
 
 </html>
