--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROJECT_DETAIL | LARSSON.DS</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -511,7 +511,7 @@
     </main>
 
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
-    <script src="main.js" type="module"></script>
+    <script type="module" src="assets/js/main.js"></script>
     <script>
         lucide.createIcons();
         document.addEventListener('DOMContentLoaded', () => {
