Implement proposal storage and expand tech stack

--- a/index.html
+++ b/index.html
@@ -301,6 +301,8 @@
                         <div class="tech-list">
                             <span class="tech-item">REACT NATIVE</span>
                             <span class="tech-item">FIREBASE</span>
+                            <span class="tech-item">HTML</span>
+                            <span class="tech-item">CSS</span>
                         </div>
                     </div>
                 </div>
