--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Larsson — Data Science & App Developer</title>
     <meta name="description"
-        content="Portfolio of Larsson — MSc Data Science student, Mobile App Developer. Building AI systems, mobile apps, and data-driven solutions.">
+        content="larssoncodes.github.io/Portfolio/ of Larsson — MSc Data Science student, Mobile App Developer. Building AI systems, mobile apps, and data-driven solutions.">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -162,7 +162,7 @@
                             </div>
                             <div class="card-actions">
                                 <a href="project.html?id=ila" class="card-btn card-btn-primary">VIEW DETAILS</a>
-                                <a href="https://github.com/LarssonDev" target="_blank"
+                                <a href="https://github.com/LarssonCodes" target="_blank"
                                     class="card-btn card-btn-secondary"><i data-lucide="github" class="btn-icon"></i>
                                     GITHUB</a>
                             </div>
@@ -194,7 +194,7 @@
                             </div>
                             <div class="card-actions">
                                 <a href="project.html?id=anatomypro" class="card-btn card-btn-primary">VIEW DETAILS</a>
-                                <a href="https://github.com/LarssonDev" target="_blank"
+                                <a href="https://github.com/LarssonCodes" target="_blank"
                                     class="card-btn card-btn-secondary"><i data-lucide="github" class="btn-icon"></i>
                                     GITHUB</a>
                             </div>
@@ -227,7 +227,7 @@
                             <div class="card-actions">
                                 <a href="project.html?id=spam-remover" class="card-btn card-btn-primary">VIEW
                                     DETAILS</a>
-                                <a href="https://github.com/LarssonDev" target="_blank"
+                                <a href="https://github.com/LarssonCodes" target="_blank"
                                     class="card-btn card-btn-secondary"><i data-lucide="github" class="btn-icon"></i>
                                     GITHUB</a>
                             </div>
@@ -258,7 +258,7 @@
                             </div>
                             <div class="card-actions">
                                 <a href="project.html?id=inbawk" class="card-btn card-btn-primary">VIEW DETAILS</a>
-                                <a href="https://github.com/LarssonDev" target="_blank"
+                                <a href="https://github.com/LarssonCodes" target="_blank"
                                     class="card-btn card-btn-secondary"><i data-lucide="github" class="btn-icon"></i>
                                     GITHUB</a>
                             </div>
@@ -396,7 +396,7 @@
                     GMAIL</a>
                 <a href="https://www.linkedin.com/in/larsson-lalremtluanga-b53796379/" class="btn-blue"
                     target="_blank"><i data-lucide="linkedin" class="btn-icon"></i> LINKEDIN</a>
-                <a href="https://github.com/LarssonDev" class="btn-green" target="_blank"><i data-lucide="github"
+                <a href="https://github.com/LarssonCodes" class="btn-green" target="_blank"><i data-lucide="github"
                         class="btn-icon"></i> GITHUB</a>
             </div>
         </div>
