Fix mangled URLs, update Nova description, and restore screenshots

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Larsson — Data Science & App Developer</title>
     <meta name="description"
-        content="larssoncodes.github.io/Portfolio/ of Larsson — MSc Data Science student, Mobile App Developer. Building AI systems, mobile apps, and data-driven solutions.">
+        content="Portfolio of Larsson — MSc Data Science student, Mobile App Developer. Building AI systems, mobile apps, and data-driven solutions.">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
