--- a/project.html
+++ b/project.html
@@ -341,7 +341,7 @@
             <button id="btn-download-trigger" class="action-btn action-btn-primary">
                 <i data-lucide="download" style="width:16px;height:16px;"></i> DOWNLOAD_APK
             </button>
-            <a id="btn-github" href="httplarssoncodes.github.io/Portfolio/des" target="_blank"
+            <a id="btn-github" href="https://github.com/LarssonCodes" target="_blank"
                 class="action-btn action-btn-secondary">
                 <i data-lucide="github" style="width:16px;height:16px;"></i> VIEW_SOURCE
             </a>
