--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                         </div>
                     </div>
                     <div class="window-content hero-content">
-                        <p class="hero-greeting">Hey, I'm</p>
-                        <h1 style="font-size:clamp(1.5rem,9.5vw,5rem);">LARSSON<span class="cursor-blink">_</span></h1>
-                        <p class="hero-tagline">Learning to build <span class="highlight-magenta">smart apps</span> &
-                            <span class="highlight-green">data systems</span>
+                        <p class="hero-greeting">Hi, I’m</p>
+                        <h1 style="font-size:clamp(1.5rem,9.5vw,5rem);">Larsson<span class="cursor-blink">_</span></h1>
+                        <p class="hero-tagline">Learning by building <span class="highlight-magenta">smart apps</span> &
+                            <span class="highlight-green">data-driven systems</span>
                         </p>
 
                         <div class="hero-bio">
