Rebrand from LARSSON.DS to LARSSON.STUDIO

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="cursor-trail"></div>
 
     <header class="navbar">
-        <div class="logo">LARSSON<span class="logo-dot">.DS</span></div>
+        <div class="logo">LARSSON<span class="logo-dot">.STUDIO</span></div>
         <nav>
             <a href="#about" class="nav-link">ABOUT</a>
             <a href="#projects" class="nav-link">PROJECTS</a>
