feat: add phone field to Build for You form; fix admin visit counter

--- a/index.html
+++ b/index.html
@@ -357,6 +357,11 @@
                         </div>
 
                         <div class="input-group">
+                            <label>CONTACT_SIGNAL (PHONE_NUMBER)</label>
+                            <input type="tel" id="client-phone" placeholder="E.G. +91 98765 43210" required>
+                        </div>
+
+                        <div class="input-group">
                             <label>PROJECT_DOMAIN</label>
                             <select id="project-type" required>
                                 <option value="">SELECT_DOMAIN</option>
