feat: add Gmail Spam Remover project card and details to portfolio

--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
                                 <span class="badge badge-js">OAuth2</span>
                             </div>
                             <div class="card-actions">
-                                <a href="project.html?id=spam-remover" class="card-btn card-btn-primary">VIEW
-                                    DETAILS</a>
-                                <a href="https://github.com/LarssonCodes" target="_blank"
-                                    class="card-btn card-btn-secondary"><i data-lucide="github" class="btn-icon"></i>
-                                    GITHUB</a>
+                                <a href="https://larssoncodes-gmail-spam-remover.streamlit.app" target="_blank"
+                                    class="card-btn card-btn-primary"><i data-lucide="external-link"
+                                        class="btn-icon"></i>
+                                    VIEW DEMO</a>
+                                <a href="project.html?id=spam-remover" class="card-btn card-btn-secondary">DETAILS</a>
                             </div>
                         </div>
                     </div>
