fix: update Streamlit demo URL to gmailspamremover.streamlit.app

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                 <span class="badge badge-js">OAuth2</span>
                             </div>
                             <div class="card-actions">
-                                <a href="https://larssoncodes-gmail-spam-remover.streamlit.app" target="_blank"
+                                <a href="https://gmailspamremover.streamlit.app" target="_blank"
                                     class="card-btn card-btn-primary"><i data-lucide="external-link"
                                         class="btn-icon"></i>
                                     VIEW DEMO</a>
